recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:16: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:20: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:23: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:26: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:29: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^PolygonFractal:32: error: not found: value lelevs
  polygonFractal(lelevs - 1,sides,length*shrink,shrink)
                 ^